WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239059
[IFC][Integration] LayoutIntegration::LineLayout should not expose InlineContent
https://bugs.webkit.org/show_bug.cgi?id=239059
Summary
[IFC][Integration] LayoutIntegration::LineLayout should not expose InlineContent
alan
Reported
2022-04-10 21:16:28 PDT
ssia
Attachments
Patch
(9.73 KB, patch)
2022-04-10 21:19 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(9.73 KB, patch)
2022-04-11 15:49 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-04-10 21:19:13 PDT
Created
attachment 457230
[details]
Patch
Darin Adler
Comment 2
2022-04-11 14:48:58 PDT
Comment on
attachment 457230
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=457230&action=review
> Source/WebCore/layout/integration/LayoutIntegrationLineLayout.cpp:497 > + return m_inlineContent ? m_inlineContent->hasVisualOverflow() : false;
I like writing these with &&, would you consider that?
alan
Comment 3
2022-04-11 14:51:57 PDT
(In reply to Darin Adler from
comment #2
)
> Comment on
attachment 457230
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=457230&action=review
> > > Source/WebCore/layout/integration/LayoutIntegrationLineLayout.cpp:497 > > + return m_inlineContent ? m_inlineContent->hasVisualOverflow() : false; > > I like writing these with &&, would you consider that?
good point! yes!
alan
Comment 4
2022-04-11 15:49:20 PDT
Created
attachment 457295
[details]
Patch
EWS
Comment 5
2022-04-11 18:31:21 PDT
Committed
r292752
(
249536@main
): <
https://commits.webkit.org/249536@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 457295
[details]
.
Radar WebKit Bug Importer
Comment 6
2022-04-11 18:32:15 PDT
<
rdar://problem/91601019
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug